Added update of document block data
